// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input full renderer Basic renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input full renderer Danger renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input full renderer Info renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input full renderer Primary renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input full renderer Success renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input full renderer Warning renders successfully 1`] = `
.c0 {
  display: grid;
  row-gap: 0.5rem;
  grid-template-columns: auto auto;
}

.c1 {
  text-transform: uppercase;
}

.c1[aria-hidden="true"] {
  border: none;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  justify-self: flex-end;
}

.c3 {
  position: relative;
  grid-column: 1 / 3;
}

.c3 svg {
  position: absolute;
}

.c4 {
  border: 0.0625rem solid var(--border-color);
  width: 100%;
  box-sizing: border-box;
  background-color: var(--background-color);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color border-color;
  transition-property: background-color border-color;
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
}

<div
  className="c0"
>
  <label
    aria-hidden="true"
    className="c1"
  >
    Empty Label
  </label>
  <span
    className="c2"
  >
    Help
  </span>
  <div
    className="c3"
    disabled={false}
  >
    <input
      className="c4"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input renders successfully 1`] = `
<inputstyled__InputGroupStyled>
  <inputstyled__InputLabelStyled>
    Input
  </inputstyled__InputLabelStyled>
  <inputstyled__InputHelpTextStyled>
    Help
  </inputstyled__InputHelpTextStyled>
  <inputstyled__InputFieldGroupStyled
    appearance="basic"
    disabled={false}
    mass="medium"
  >
    <inputstyled__InputFieldStyled
      appearance="basic"
      disabled={false}
      icon={null}
      mass="medium"
      type="text"
    />
  </inputstyled__InputFieldGroupStyled>
</inputstyled__InputGroupStyled>
`;

exports[`Input when disabled renders successfully 1`] = `
<inputstyled__InputGroupStyled>
  <inputstyled__InputLabelStyled>
    Input
  </inputstyled__InputLabelStyled>
  <inputstyled__InputHelpTextStyled>
    Help
  </inputstyled__InputHelpTextStyled>
  <inputstyled__InputFieldGroupStyled
    appearance="basic"
    disabled={true}
    mass="medium"
  >
    <inputstyled__InputFieldStyled
      appearance="basic"
      disabled={true}
      icon={null}
      mass="medium"
      type="text"
    />
  </inputstyled__InputFieldGroupStyled>
</inputstyled__InputGroupStyled>
`;

exports[`Input when has caption renders with caption 1`] = `
<inputstyled__InputGroupStyled>
  <inputstyled__InputLabelStyled>
    Input
  </inputstyled__InputLabelStyled>
  <inputstyled__InputHelpTextStyled>
    Help
  </inputstyled__InputHelpTextStyled>
  <inputstyled__InputFieldGroupStyled
    appearance="basic"
    disabled={false}
    mass="medium"
  >
    <inputstyled__InputFieldStyled
      appearance="basic"
      disabled={false}
      icon={null}
      mass="medium"
      type="text"
    />
  </inputstyled__InputFieldGroupStyled>
  <inputstyled__InputCaptionStyled
    appearance="basic"
  >
    Caption
  </inputstyled__InputCaptionStyled>
</inputstyled__InputGroupStyled>
`;

exports[`Input when has icon renders successfully 1`] = `
<inputstyled__InputGroupStyled>
  <inputstyled__InputLabelStyled>
    Input
  </inputstyled__InputLabelStyled>
  <inputstyled__InputHelpTextStyled>
    Help
  </inputstyled__InputHelpTextStyled>
  <inputstyled__InputFieldGroupStyled
    appearance="basic"
    disabled={false}
    mass="medium"
  >
    <inputstyled__InputFieldStyled
      appearance="basic"
      disabled={false}
      icon={
        <span>
          icon
        </span>
      }
      mass="medium"
      type="text"
    />
    <span>
      icon
    </span>
  </inputstyled__InputFieldGroupStyled>
</inputstyled__InputGroupStyled>
`;

exports[`Input when no children provided renders successfully 1`] = `
<inputstyled__InputGroupStyled>
  <inputstyled__InputLabelStyled
    aria-hidden="true"
  >
    Empty Label
  </inputstyled__InputLabelStyled>
  <inputstyled__InputHelpTextStyled>
    Help
  </inputstyled__InputHelpTextStyled>
  <inputstyled__InputFieldGroupStyled
    appearance="basic"
    disabled={false}
    mass="medium"
  >
    <inputstyled__InputFieldStyled
      appearance="basic"
      disabled={false}
      icon={null}
      mass="medium"
      type="text"
    />
  </inputstyled__InputFieldGroupStyled>
</inputstyled__InputGroupStyled>
`;
